--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -5,8 +5,11 @@
   align-items: center;
   padding: 6rem;
   min-height: 100vh;
+  
 }
-
+.content{
+  background-color:aquamarine;
+}
 .description {
   display: inherit;
   justify-content: inherit;
